--- a/SD/M5NS.INI
+++ b/SD/M5NS.INI
@@ -7,12 +7,19 @@ dst = 3600
 
 show_mgdl = 0
 
+snooze_timeout = 30
+alarm_repeat = 5
+
 yellow_low = 4.5
-yellow_high = 9
+yellow_high = 9.0
 red_low = 3.9
-red_high = 11
+red_high = 11.0
+
 snd_warning = 3.7
 snd_alarm = 3.0
+snd_warning_high = 14.0
+snd_alarm_high = 20.0
+snd_no_readings = 30
 
 brightness1 = 50
 brightness2 = 100
