M5NS.INI file updated

--- a/SD/M5NS.INI
+++ b/SD/M5NS.INI
@@ -26,6 +26,8 @@ snd_no_readings = 20
 warning_volume = 20
 alarm_volume = 100
 
+info_line = 1
+
 brightness1 = 50
 brightness2 = 100
 brightness3 = 10
