More silent speaker. Found the way how to switch off adc1 after sound play. Added token key in M5NS.INI to allow connection to secured Nightscout sites (thanks to Peter Leimbach). Added keys snd_warning_at_startup and snd_alarm_at_startup to play warning/alarm sound test during startup.

--- a/SD/M5NS.INI
+++ b/SD/M5NS.INI
@@ -21,8 +21,9 @@ snd_warning = 70
 snd_alarm = 60
 snd_warning_high = 200
 snd_alarm_high = 300
-
 snd_no_readings = 20
+snd_warning_at_startup = 1
+snd_alarm_at_startup = 0
 
 warning_volume = 50
 alarm_volume = 100
