Split of Nightscout read and display code (this should allow simpler user display code update and more different "faces" from users). New concept of display pages (different display designs, information, faces). Switch page by short press of the right button. Power OFF by the right button long press (4 seconds). Right button works also as power ON after power off by this button. New page added with large simple info (large BG, clock, delta + arrow and  few icons only). New M5NS.INI key "default_page" added (default 0). Smaller WiFi symbol (now as blue WiFi icon in 2 sizes for the 2 different Nightscout queries). Buttons do not work during Nightscout communication (blue WiFi symbol displayed). Bigger delta value even with COB+IOB values displayed (COB: and IOB: shortened to C: and I: ). Errors now logged silently (log can be displayed as the last page). Warning triangle icon added to show that errors are in the log (up to 5 errors - grey, more - yellow). Only last 10 errors can be displayed. New M5NS.INI key "restart_at_time" added (default no restart) to restart M5Stack regularly at predefined time to reconnect to WiFi access point and clear possible other errors. No startup sound during soft restart, snooze state reapplied, errors cleared. New M5NS.INI key "restart_at_logged_errors" added (default no restart) to restart M5Stack after predefined amount of errors logged in error log to reconnect to WiFi access point and clear possible other errors. No startup sound during soft restart, snooze state reapplied, errors cleared. Right button power icon changed to door icon to better express the page change/power off functions.

--- a/SD/M5NS.INI
+++ b/SD/M5NS.INI
@@ -6,8 +6,10 @@ time_zone = 3600
 dst = 3600
 
 show_mgdl = 1
+
 show_current_time = 1
 show_COB_IOB = 1
+default_page = 0
 
 snooze_timeout = 30
 alarm_repeat = 5
