M5NS.INI updated with the lateste keys added.

--- a/SD/M5NS.INI
+++ b/SD/M5NS.INI
@@ -31,6 +31,9 @@ warning_volume = 50
 alarm_volume = 100
 
 info_line = 1
+date_format = 0
+display_rotation = 1
+temperature_unit = 1
 
 brightness1 = 50
 brightness2 = 100
