mods to M5NS.INI (should be ignored due to .gitignore)

--- a/SD/M5NS.INI
+++ b/SD/M5NS.INI
@@ -1,7 +1,7 @@
 [config]
-nightscout = yoursite.herokuapp.com
+nightscout = guyd-ns.herokuapp.com
 bootpic = /M5_NightscoutMon.jpg
-name = YourName
+name = Guy
 time_zone = 3600
 dst = 3600
 
@@ -10,15 +10,15 @@ sgv_only = 0
 
 show_current_time = 1
 show_COB_IOB = 1
-default_page = 0
+default_page = 1
 
 snooze_timeout = 30
 alarm_repeat = 5
 
 yellow_low = 80
-yellow_high = 160
+yellow_high = 180
 red_low = 70
-red_high = 200
+red_high = 250
 
 snd_warning = 70
 snd_alarm = 60
@@ -28,26 +28,18 @@ snd_no_readings = 20
 snd_warning_at_startup = 1
 snd_alarm_at_startup = 0
 
-warning_volume = 50
-alarm_volume = 100
+warning_volume = 0
+alarm_volume = 1
 
-info_line = 1
+info_line = 3
 date_format = 0
 display_rotation = 1
 temperature_unit = 1
 
-brightness1 = 50
-brightness2 = 100
-brightness3 = 10
+brightness1 = 5
+brightness2 = 50
+brightness3 = 100
 
 [wlan1]
-ssid = ssid1
-pass = pass1
-
-[wlan2]
-ssid = ssid2
-pass = pass2
-
-[wlan3]
-ssid = ssid3
-pass = pass3
+ssid = IPARCHother
+pass = stayawayfrommywirelessnetwork
