--- a/SD/M5NS.INI
+++ b/SD/M5NS.INI
@@ -1,7 +1,7 @@
 [config]
-nightscout = yoursite.herokuapp.com
+nightscout = http://kubacukier.herokuapp.com/
 bootpic = /M5_NightscoutMon.jpg
-name = YourName
+name = kuba
 time_zone = 3600
 dst = 3600
 
@@ -9,21 +9,21 @@ show_mgdl = 1
 sgv_only = 0
 
 show_current_time = 1
-show_COB_IOB = 1
+show_COB_IOB = 0
 default_page = 0
 
 snooze_timeout = 30
 alarm_repeat = 5
 
-yellow_low = 80
-yellow_high = 160
-red_low = 70
+yellow_low = 70
+yellow_high = 180
+red_low = 60
 red_high = 200
 
 snd_warning = 70
-snd_alarm = 60
-snd_warning_high = 200
-snd_alarm_high = 300
+snd_alarm = 70
+snd_warning_high = 180
+snd_alarm_high = 240
 snd_no_readings = 20
 snd_warning_at_startup = 1
 snd_alarm_at_startup = 0
@@ -36,9 +36,9 @@ date_format = 0
 display_rotation = 1
 temperature_unit = 1
 
-brightness1 = 50
-brightness2 = 100
-brightness3 = 10
+brightness1 = 5
+brightness2 = 40
+brightness3 = 100
 
 [wlan1]
 ssid = ssid1
